--- a/src/main/scala/MonteCarloIntegration/отчет.md
+++ b/src/main/scala/MonteCarloIntegration/отчет.md
@@ -56,7 +56,7 @@ val integral = rectangleArea * ratio // Площадь
 
 
 ## **Пример вывода**
-![img.png](img.png)  
+![img.png](../../../../img.png)  
 
 
 ##  **Ключевые технологии**
