--- a/src/main/scala/MonteCarloIntegration/отчет.md
+++ b/src/main/scala/MonteCarloIntegration/отчет.md
@@ -10,7 +10,7 @@
 MonteCarloIntegration/  
 └── MonteCarloIntegration.scala
 
-## 🔧 **Алгоритм Монте-Карло**
+## **Алгоритм Монте-Карло**
 
 ### **1. Поиск ограничивающего прямоугольника**
 (я не разобрался как вставлять ссылки)  
